# sleep_thing_firmware

./: .gitignore  Cargo.toml  sdkconfig.defaults
.cargo/: config.toml
src/: main.rs  sensors.rs
src/sensors/: bme280.rs  common.rs  scd4x.rs  trait_def.rs  tsl2591.rs
