[package]
name = "sleep_thing"
version = "0.1.0"
authors = ["Max Khardin <max.khardin@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"


[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
#opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]
scd4x = ["scd4x/scd41"]


[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.51.0", default-features = false }
scd4x = { version = "0.4.0", default-features = false }
anyhow = "1.0.79"
embedded-hal-bus = "0.3.0"
tsl2591-eh-driver = "0.5.1"
rand = "0.9.0"
ringbuffer = "0.15.0"

[build-dependencies]
embuild = "0.33.0"
