[package]
name = "sleep_thing"
version = "0.1.0"
authors = ["Max Khardin <max.khardin@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.86.0"


[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]
scd4x = ["dep:scd4x", "scd4x/scd41"]
bme280 = ["dep:bme280-rs"]
tsl2591 = ["dep:tsl2591-eh-driver"]

[dependencies]
log = { version = "0.4.27", default-features = false }
esp-idf-svc = { version = "0.51.0", default-features = false }
scd4x = { version = "0.4.0", default-features = false, optional = true }
anyhow = "1.0.79"
embedded-hal = {version = "1.0.0"}
embedded-hal-bus = { version = "0.3.0", features = ["alloc"] }
tsl2591-eh-driver = { version = "0.5.1", optional = true }
rand = "0.9.0"
ringbuffer = "0.15.0"
bme280-rs = { version = "0.3.0", optional = true }

[build-dependencies]
embuild = "0.33.0"
